--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -21,7 +21,7 @@ jobs:
         bun-version: latest
 
     - name: Install dependencies
-      run: bun i -g @antfu/ni && bunx playwright install --with-deps && bun install --frozen-lockfile -s
+      run: bun i -g @antfu/ni && bunx playwright install --with-deps && bun install --frozen-lockfile --slient
 
     - name: Crawling
       run: nr start:prod -a
