--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,16 +12,16 @@ jobs:
         repository: cangzhang/champr-crawler
         token: ${{ secrets.GH_PAT }}
 
-    # - uses: actions/setup-node@v4
-    #   with:
-    #     node-version: lts/*
+    - uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
 
     - uses: oven-sh/setup-bun@v1
       with:
         bun-version: latest
 
     - name: Install dependencies
-      run: bun i -g @antfu/ni && bunx playwright install --with-deps && bun install --frozen-lockfile --slient
+      run: bunx playwright install --with-deps && bun install --frozen-lockfile --slient
 
     - name: Crawling
       run: nr start:prod -a
